objects/ActionPlanTemplate__c.object
<CustomObject><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ImportId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ImportId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>SkipDay__c</fullName>
        <description>If a Due Date lands on a weekend it should be pushed to this day.</description>
        <label>Skip Day</label>
        <picklist>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>SkipWeekends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend.</description>
        <inlineHelpText>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend.</inlineHelpText>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TaskRecordTypeID__c</fullName>
        <label>Task Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Template for Action Plan</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Action Plan Template</label><nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Action Plan Templates</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>